--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guilherme Felipe</title>
+    <title>Guilherme Felipe - Desenvolvedor Júnior
+  
+    </title>
     <link rel="stylesheet" href="/src/css/style.css" />
     <link
       rel="shortcut icon"
