atualizações de sites

--- a/index.html
+++ b/index.html
@@ -164,6 +164,26 @@
         </div>
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="card">
+            <h4>Wise Goat - O Bode Sábio</h4>
+            <a href="https://wisegoat.netlify.app" target="_blank">
+              <div class="imagem">
+                <img src="./src/img/14.png" alt="Wise Goat " class="img-fluid" />
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card">
+            <h4>Contador de datas</h4>
+            <a href="https://contadordata.netlify.app/index.html" target="_blank">
+              <div class="imagem">
+                <img src="./src/img/15.png" alt="Site contador de datas" class="img-fluid" />
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card">
             <h4>Codar</h4>
             <a href="https://glerme.github.io/Codar/" target="_blank">
               <div class="imagem">
