--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div class="col-12 col-md-6 container-email">
               <div class="a">
                 <h4>Email para Contato:</h4>
-                <a href="mailto:guiggff@gmail.com?subject='Contato'">guiggff@gmail.com</h5>
+                <a href="mailto:guiggff@gmail.com?subject='Contato'" class="email">guiggff@gmail.com</h5>
               </div>
             </div>
         </div>
