--- a/index.html
+++ b/index.html
@@ -153,6 +153,16 @@
       <h2 style="padding: 5px;">Projetos finalizados:</h2>
       <div class="row">
         <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card" style="padding: 30px;">
+            <h4>Busca vagas - Bauru Empregos</h4>
+            <a href="https://github.com/Glerme/Bot_Bauru_Empregos" target="_blank">
+              <div class="imagem">
+                <img src="./src/img/printTela.png" alt="Bot Bauru Empregos" class="img-fluid"/>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4">
           <div class="card">
             <h4>Calculadora</h4>
             <a href="https://glerme.github.io/Calculadora/" target="_blank">
