--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
  <!-- Seção Projetos -->
-    <section id="projetos">
+    <!-- <section id="projetos">
         <div class="container">
           <h2>Projetos:</h2>
           <h4>Em andamento:</h4>
@@ -119,19 +119,12 @@
                 <div class="bloco-projetos js-scroll">
                   <div class="projetos-andamento">             
                     <ul class="custom-controls">
-                      <li><img src="./src/img/13.png" class="img-fluid" alt="Controle slide 1"></li>
                       <li><img src="./src/img/e4tdownloads.png" class="img-fluid" alt="Controle slide 2"></li>
                       <li><img src="./src/img/e4tlogin.png"  class="img-fluid" alt="Controle slide 3"></li>
                     </ul>
                     <div>
                       <div class="slide-wrapper">
                         <ul class="slide">
-                          <li>
-                            <a href="https://glerme.github.io/pokedex/" target="_blank"
-                              ><img src="./src/img/13.png" class="img-fluid" alt="Projeto Pokédex" />
-                            </a>
-                          </li>
-                          <li>
                             <a href="https://www.e4t.com.br/downloads" target="_blank">
                               <img src="./src/img/e4tdownloads.png" class="img-fluid" alt="Projeto site Elite dos quatro traduções"  />
                             </a></li>
@@ -146,12 +139,32 @@
         </div>
     </section>
 
-    <hr>
+    <hr> -->
 
     <!-- Seção Projetos finalizados -->
     <section class="container js-scroll">
       <h2 style="padding: 5px;">Projetos finalizados:</h2>
       <div class="row">
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card" >
+            <h4>Pokédex - React</h4>
+            <a href="https://pokedexreact.vercel.app" target="_blank">
+              <div class="imagem">
+                <img src="https://raw.githubusercontent.com/Glerme/Pokedex-React/main/public/telaInicial.png" alt="Pokédex - React" class="img-fluid"/>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card" >
+            <h4>Pokédex - HTML</h4>
+            <a href="https://glerme.github.io/pokedex/" target="_blank">
+              <div class="imagem">
+                <img src="./src/img/13.png" alt="Bot Bauru Empregos" class="img-fluid"/>
+              </div>
+            </a>
+          </div>
+        </div>
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="card" style="padding: 30px;">
             <h4>Busca vagas - Bauru Empregos</h4>
